# ldtstore-homepage

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  build.ts  codegen.ts  deno.json  index.html  index.major.yml  index.sides.yml  jsonhtml.ts  main.js  main.ts  public.sides.yml  replace.ts  shared.ts  style.css  test-now-codegen.ts
codegen/: Cargo.toml  README.md  build.rs  codegen.fsx  codegen.rs  codegen2.fsx  config.fsx  config.rs  data.fsx  data.rs  jsldr.rs  lib.rs  main.rs  util.rs
codegen-deprecated/: README.md  build.ts  codegen.ts  shared.ts
dynamic/: index.html  main.ts  style.css
dynamic/code/: jsldr.ts  main.ts  style.css
dynamic/guide-page/: index.html
dynamic/guide-page-intl/: index.html
dynamic/ldt/: index.html
dynamic/ldtools/: index.html  plain.html
dynamic/legacy/: index.html
dynamic/page/: rename.yml
dynamic/page/guide-page/: body.html  config.yml
dynamic/page/guide-page-intl/: body.html  config.yml  head.html
dynamic/page/ldt/: body.html  config.yml  head.html
dynamic/page/tool/: body.html  config.yml  head.html
dynamic/page/tool-plain/: body.html  config.yml  head.html
dynamic/tool/: index.html  plain.html
fragment/: classic-base.css  classic-change-visible.ts  classic.ts  footer-intl.html  footer.html  icon.svg.html  icpreg.ts  meta.html  plain.css  plain.js  plain.ts  search.html  side-test.html  tool-base.html
ldtools/: index.category.yml  index.html  index.major.yml  index.sides.yml  index.tools.yml  main.ts  plain.html
page/home/: index.html  major.yml  sides.yml
page/legacy/: buttons.yml
page/public/: sides.yml
page/tool/: category.yml  index.html  major.yml  sides.yml  tools.yml
shared/: style.css
static/: error.html  jsldr_index.html  robots.txt
