[package]
name = "ldtstore-codegen"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/stackinspector/ldtstore-codegen"
build = "build.rs"

[lib]
name = "ldtstore_codegen"
path = "lib.rs"

[[bin]]
name = "ldtstore-codegen"
path = "main.rs"

[dependencies]
argh = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
serde_yaml = "0.9"
indexmap = { version = "1.9", features = ["serde"] }
macros = { git = "https://github.com/Berylsoft/rust-macros" }
lighthtml = { path = "../../Berylsoft/lighthtml" }
